--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="status-card black">Tiktok <span id="jumlahLive">30</span></div>
     <div class="status-card orange">Shopee <span id="liveAktif">0</span></div>
     <div class="status-card violet">Instagram <span id="liveTerjadwal">0</span></div>
-    <div class="status-card blue">Facebook <span id="liveMati"0</span></div>
+    <div class="status-card blue">Facebook <span id="liveMati">0</span></div>
         <div class="status-card blue">Telegram <span id="jumlahLive">0</span></div>
     <div class="status-card red">Youtube <span id="liveAktif">0</span></div>
     <div class="status-card green">Live Terjadwal <span id="liveTerjadwal">30</span></div>
