--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </style>
 </head>
 <body>
-  <h1>Live Plan Anjani Blast</h1>
+  <h1>Live Plan Garasihelm.id</h1>
 
   <!-- STATUS HEADER -->
   <div class="header-status">
